Added a .gitignore file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
   
     <!-- Swiper css -->
-    <link rel="stylesheet" href="/static/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
     <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 <body>
     <div class="container">
@@ -94,16 +96,11 @@
                 <div class="slide-widget">
                     <div class="card-container">
                         <div class="card-content swiper">
-                        <!-- Additional required wrapper -->
+                            <!-- Swiper Wrapper -->
                             <div class="swiper-wrapper">
-                        <!-- Slides -->
-                                <div class=" cards swiper-slide">
-                                    <!-- <div class="card-lines">
-                                        <span ></span>
-                                        <span ></span>
-                                        <span ></span>
-                                        <span ></span>
-                                    </div> -->
+                                <!-- Slides -->
+                                <div class="cards swiper-slide">
+                                    <!-- Slide 1 content -->
                                     <div class="deadline-count-down">
                                         <div id="time">
                                             <div class="circle" style="--clr: #7f11c4;">
@@ -145,20 +142,105 @@
                                         <input type="button" value="view" class="input">
                                     </div>
                                 </div>
-                                <div class="swiper-slide">Slide 2</div>
-                                <div class="swiper-slide">Slide 3</div>
-                                ...
-                                <!-- If we need pagination -->
-                                <div class="swiper-pagination"></div>
-                                <!-- If we need navigation buttons -->
-                                <div class="swiper-button-prev"></div>
-                                <div class="swiper-button-next"></div>
-                                <!-- If we need scrollbar -->
-                                <div class="swiper-scrollbar"></div> 
+                                <div class="cards swiper-slide">
+                                    <!-- Slide 2 content -->
+                                    <div class="deadline-count-down">
+                                        <div id="time">
+                                            <div class="circle" style="--clr: #7f11c4;">
+                                                <svg>
+                                                    <circle cx = "45" cy = "45" r = "45" id = "dd"></circle>
+                                                </svg>
+                                                <div id="days">00 <br> <span>Days</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #61d81c;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "hh"></circle>
+                                                </svg>
+                                                <div id="hours">00 <br> <span>Hours</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #0ef;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "mm"></circle>
+                                                </svg>
+                                                <div id="minutes">00 <br> <span>Minutes</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #2987a3;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "ss"></circle>
+                                                </svg>
+                                                <div id="seconds">00 <br> <span>Seconds</span></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-title">
+                                        <h4 class="id">Task ID</h4>
+                                        <h4 class="task-title">Wireframes</h4>
+                                    </div>
+                                    <div class="card-description">
+                                        <p>All the frames are designed and connected</p>
+                                    </div>
+                                    <div class="card-action">
+                                        <p>Start time: 12/3/2024 <span>12:34:33</span></p>
+                                        <p>Due time: 14/3/2024 <span>12:34:33</span></p>
+                                        <input type="button" value="view" class="input">
+                                    </div>
+                                </div>
+                                <div class=" cards swiper-slide">
+                                    <!-- Slide 3 content -->
+                                    <div class="deadline-count-down">
+                                        <div id="time">
+                                            <div class="circle" style="--clr: #7f11c4;">
+                                                <svg>
+                                                    <circle cx = "45" cy = "45" r = "45" id = "dd"></circle>
+                                                </svg>
+                                                <div id="days">00 <br> <span>Days</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #61d81c;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "hh"></circle>
+                                                </svg>
+                                                <div id="hours">00 <br> <span>Hours</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #0ef;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "mm"></circle>
+                                                </svg>
+                                                <div id="minutes">00 <br> <span>Minutes</span></div>
+                                            </div>
+                                            <div class="circle" style="--clr: #2987a3;">
+                                                <svg>
+                                                    <circle  cx = "45" cy = "45" r = "45" id = "ss"></circle>
+                                                </svg>
+                                                <div id="seconds">00 <br> <span>Seconds</span></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-title">
+                                        <h4 class="id">Task ID</h4>
+                                        <h4 class="task-title">Wireframes</h4>
+                                    </div>
+                                    <div class="card-description">
+                                        <p>All the frames are designed and connected</p>
+                                    </div>
+                                    <div class="card-action">
+                                        <p>Start time: 12/3/2024 <span>12:34:33</span></p>
+                                        <p>Due time: 14/3/2024 <span>12:34:33</span></p>
+                                        <input type="button" value="view" class="input">
+                                    </div>
+                                </div>
+                                <!-- Add more slides as needed -->
                             </div>
-                        </div>   
-                    </div>    
+                            <!-- If we need pagination -->
+                            <div class="swiper-pagination"></div>
+                            <!-- If we need navigation buttons -->
+                            <div class="swiper-button-prev"></div>
+                            <div class="swiper-button-next"></div>
+                            <!-- If we need scrollbar -->
+                            <div class="swiper-scrollbar"></div>
+                        </div>
+                    </div>
                 </div>
+                
                 <div class="aside-widget">
                     <div class="box">
                         <span>
@@ -334,7 +416,9 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/static/js/script.js" type="module"></script>
+    <script src="/static/js/config.js" type = "module"></script>
 </body>
 <!-- Swiper js -->
-    <script src="/static/js/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 </html>
