--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
                         <div class="statusList">
                             <div class=" tasks total-tasks">
                                 <h4>Total Tasks</h4>
-                                <div class="task-icon"><img src="/static/images/task.png" alt="" srcset=""><span>23</span></div>
+                                <div class="task-icon"><img src="/static/images/task.png" alt="" srcset=""><span id="totalTasks">0</span></div>
                             </div>
                             <div class=" tasks pending-tasks">
                                 <h4>Ongoing</h4>
-                                <div class="task-icon"><img src="/static/images/automation.png" alt="" srcset=""><span>8</span></div>
+                                <div class="task-icon"><img src="/static/images/automation.png" alt="" srcset=""><span id="ongoingTasks">0</span></div>
                             </div>
                             <div class=" tasks pending-tasks">
                                 <h4>Pending </h4>
-                                <div class="task-icon"><img src="/static/images/pending-tasks.png" alt="" srcset=""><span>11</span></div>
+                                <div class="task-icon"><img src="/static/images/pending-tasks.png" alt="" srcset=""><span>0</span></div>
                             </div>
                             <div class=" tasks completed-tasks">
                                 <h4>Completed</h4>
-                                <div class="task-icon"><img src="/static/images/completed-task.png" alt="" srcset=""><span>4</span></div>
+                                <div class="task-icon"><img src="/static/images/completed-task.png" alt="" srcset=""><span>0</span></div>
                             </div>
                         </div>
                     </div>
@@ -165,9 +165,8 @@
                         <table cellpadding = "0" cellspacing ="0" border="0">
                             <thead>
                                 <tr>
-                                    <!-- <th>Date</th>
-                                    <th>Time Created</th>
-                                    <th>Task Id</th> -->
+                                    <th>No</th>
+                                    <th>Task Id</th> 
                                     <th>Task Name</th>
                                     <th>Description</th>
                                     <th>Priority</th>
