--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="main-widget-list" id="fade">
                     <div class="table-header">
-                        <table cellpadding = "0" cellspacing ="0" border="0">
+                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-table-header">
                             <thead>
                                 <tr>
                                     <th>No</th>
@@ -179,7 +179,7 @@
                         </table>
                     </div>
                     <div class="display">
-                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-able" >
+                        <table cellpadding = "0" cellspacing ="0" border="0" id="task-table" >
                             <tbody id="tasks-table-body"></tbody>
                         </table>
                     </div>
@@ -279,7 +279,7 @@
             </div>
         </section>
     </div>
-    
+    </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/static/js/script.js" type="module"></script>
