Upadated UI messages

--- a/index.html
+++ b/index.html
@@ -124,17 +124,17 @@
                                     <div class="timeline-box">
                                         <div class="timeline-content" id="task-container">
                                             <div class="content"> 
-                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon> 2024 - 2024 <h4>04:00 AM</h4></div>
+                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon><h4>04:00 AM</h4></div>
                                                 <h3>Wake Up</h3>
                                                 <p>Hit to the Gym</p>
                                             </div>
                                             <div class="content">
-                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon> 2024 - 2024 <h4>04:00 AM</h4></div>
+                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon> <h4>04:00 AM</h4></div>
                                                 <h3>Meeting with client 0a1</h3>
                                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae iusto eius sunt culpa ullam vitae voluptas debitis ut, </p>
                                             </div>
                                             <div class="content">
-                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon> 2024 - 2024 <h4>04:00 AM</h4></div>
+                                                <div class="year"><ion-icon name="calendar-outline"></ion-icon> <h4>04:00 AM</h4></div>
                                                 <h3>Design a login Form</h3>
                                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae iusto eius sunt culpa ullam vitae voluptas debitis ut, </p>
                                             </div>
