Added edit task feature

--- a/index.html
+++ b/index.html
@@ -259,6 +259,34 @@
                     </div>
                 </form>
             </div>
+            <div class="edit-form-container">
+                <form id="edit-form">
+                    <div id="closeBtn"><ion-icon name="close-outline"></ion-icon></div>
+                    <div class="form-group">
+                        <label for="task-name">Task ID:</label>
+                        <input type="text" id="task-Id" name="task-Id" required>
+                      </div>
+                    <div class="form-group">
+                        <label for="task-name">Task Name:</label>
+                        <input type="text" id="task-name" name="task-name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-description">Task Description:</label>
+                        <textarea id="task-description" name="task-description" rows="4" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Start Time:</label>
+                        <input type="text" id="task-start-time" name="task-start-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Due Time:</label>
+                        <input type="text" id="task-due-time" name="task-due-time" required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">Save Changes</button>
+                    </div>
+                </form>
+              </div>
         </section>
         <section id="footer" class = "footer">
             <div class="footer-pane">
