--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         </div>
                         <div class = "select-menu">
                             <div class = "select-btn" id="select_btn">
-                                <label id="option-name">Working on</label>
+                                <label id="option-name">Status</label>
                                 <ion-icon name="chevron-down-outline"></ion-icon>
                             </div>
                             <ul class="list">
