--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Task Manager || Manage your Tasks</title>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
 
-  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Swiper css -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
@@ -34,7 +34,7 @@
                         <li class="list">
                             <a href="#footer">
                                 <span class="icon"><ion-icon name="mail-unread-outline"></ion-icon></span>
-                                <span class="text">Messages</span>
+                                <span class="text">Message</span>
                             </a>
                         </li>
                         <div class="indicator"></div>
@@ -185,7 +185,7 @@
                     </div>
                 </div>
                 <div class="bottom-widget">
-                    <h2>aside</h2>
+                    <h2>table nav - links</h2>
                 </div>
             </div>
             <div class="add-task-container" id="taskForm">
@@ -241,15 +241,15 @@
                             <ul class="list">
                                 <li class="option" id="statusOption" style="--i:3">
                                     <ion-icon name="trending-up-outline" class="icon"></ion-icon>
-                                    <span class="option-text">Start Now</span>
+                                    <span class="option-text" id="onhold-tasks">On Hold</span>
                                 </li>
                                 <li class="option" id="statusOption" style="--i:2">
                                     <ion-icon name="barbell-outline" class="icon"></ion-icon>
-                                    <span class="option-text">Later</span>
+                                    <span class="option-text" id = "pending-tasks">Pending</span>
                                 </li>
                                 <li class="option" id="statusOption" style="--i:1">
                                     <ion-icon name="trending-down-outline" class="icon"></ion-icon>
-                                    <span class="option-text">On Progress</span>
+                                    <span class="option-text">In Progress</span>
                                 </li>
                             </ul>
                         </div>
@@ -289,21 +289,73 @@
               </div>
         </section>
         <section id="footer" class = "footer">
-            <div class="footer-pane">
-                <table cellpadding = "0" cellspacing ="0" border="0" id = "myTable">
-                    <thead>
-                        <tr>
-                            <th>Task Name</th>
-                            <th>Description</th>
-                            <th>Start Date</th>
-                            <th>Due Date</th>
-                            <th>Priority</th>
-                            <th>Status</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody id = "table-data"></tbody>
-                </table>
+            <div class= "footer-pane">
+                <div class = "main-nav">
+                    <div class="container-contact-form">
+                        <div class="content">
+                            <div class="left-side">
+                                <div class="address details">
+                                    <i class="fa fa-map-marker"></i>
+                                    <div class="topic">Address</div>
+                                    <div class="text-one"> Galanema, NP12</div>
+                                    <div class="text-two">Chonyi 03</div>
+                                </div>
+                                <div class="phone details">
+                                    <i class="fa fa-phone"></i>
+                                    <div class="topic">Phone</div>
+                                    <div class="text-one"> +254719 454 431</div>
+                                    <div class="text-two">+254711 274 834</div>
+                                </div>
+                                <div class="email details">
+                                    <i class="fa fa-envelope"></i>
+                                    <div class="topic">Email</div>
+                                    <div class="text-one"> fixtone94tec@gmail.com</div>
+                                    <div class="text-two">info.damunchi@94tec.com</div>
+                                </div>
+                            </div>
+                            <div class="right-side">
+                                <div class="topic-text">Send us a message</div>
+                                <p>If you have any work from me or any types of quries related to web Design, you can send me a message from here its  my pleasure to help you. </p>
+                                <form action="">
+                                    <div class="input-box">
+                                        <input type="text" placeholder="Enter your name">
+                                    </div>
+                                    <div class="input-box">
+                                        <input type="text" placeholder="Enter your email">
+                                    </div>
+                                    <div class="input-box message-box">
+                                        <textarea></textarea>
+                                    </div>
+                                    <div class="button">
+                                        <input type="button" value="Send Now">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "footer-nav">
+                    <ul class="social-links">
+                        <li class="github">
+                          <a href="https://github.com" target="_blank">
+                            <span>GitHub</span>
+                            <ion-icon name="logo-github"></ion-icon>
+                          </a>
+                        </li>
+                        <li class="linkedin">
+                          <a href="https://linkedin.com" target="_blank">
+                            <span>LinkedIn</span>
+                            <ion-icon name="logo-linkedin"></ion-icon>
+                          </a>
+                        </li>
+                        <li class="x">
+                          <a href="https://example.com" target="_blank">
+                            <span>X</span>
+                            <ion-icon name="logo-twitter"></ion-icon>
+                          </a>
+                        </li>
+                      </ul>
+                </div>
             </div>
         </section>
     </div>
