Defined a function to fetch pending tasks

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </div>
                             <div class=" tasks pending-tasks">
                                 <h4>Pending </h4>
-                                <div class="task-icon"><img src="/static/images/pending-tasks.png" alt="" srcset=""><span>0</span></div>
+                                <div class="task-icon"><img src="/static/images/pending-tasks.png" alt="" srcset=""><span id="pendingTasks">0</span></div>
                             </div>
                             <div class=" tasks completed-tasks">
                                 <h4>Completed</h4>
