--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager || Manage your Tasks</title>
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2?v=4.7.0" as="font" type="font/woff2" crossorigin>
     <!-- Swiper css -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
@@ -198,6 +196,13 @@
                     <p>Are you sure you want to delete this task?</p>
                     <div class="cancelBtnArea"><button id="confirmDeleteBtn">Confirm</button></div>
                 </div>
+                <div id="click-to-popup-task-data">
+                    <div class = "hidePopupBtn"><ion-icon name="close-outline"></ion-icon></div>
+                    <p>Click to view more details about this task?</p>
+                    <div class = 'btns'>
+                        <button>View More</button>
+                    </div>
+                </div> 
                 <!-- Toast message container -->
                 <div class="toast-test" id="toastMessage"></div>  
                 <div class="bottom-widget">
@@ -265,7 +270,7 @@
                                 </li>
                                 <li class="option" id="statusOption" style="--i:1">
                                     <ion-icon name="trending-down-outline" class="icon"></ion-icon>
-                                    <span class="option-text">In Progress</span>
+                                    <span class="option-text">Upcoming</span>
                                 </li>
                             </ul>
                         </div>
@@ -303,6 +308,42 @@
                     </div>
                 </form>
               </div>
+              <div class="tasks-display-container">
+                <form id="task-data">
+                    <div id="closeBtn"><ion-icon name="close-outline"></ion-icon></div>
+                    <div class="form-group">
+                        <label for="task-name">Task ID:</label>
+                        <input type="text" id="task-Id" name="task-Id" required>
+                      </div>
+                    <div class="form-group">
+                        <label for="task-name">Task Name:</label>
+                        <input type="text" id="task-name" name="task-name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-description">Task Description:</label>
+                        <textarea id="task-description" name="task-description" rows="4" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Start Time:</label>
+                        <input type="text" id="task-start-time" name="task-start-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Due Time:</label>
+                        <input type="text" id="task-due-time" name="task-due-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Priority:</label>
+                        <input type="text" id="task-start-time" name="task-start-time" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="task-name">Status:</label>
+                        <input type="text" id="task-due-time" name="task-due-time" required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">Click to complete this task</button>
+                    </div>
+                </form>
+              </div>
         </section>
         <section id="footer" class = "footer">
             <div class= "footer-pane">
@@ -317,7 +358,7 @@
                                     <div class="text-two">Chonyi 03</div>
                                 </div>
                                 <div class="phone details">
-                                    <i class="fa fa-phone"></i>
+                                    <ion-icon name="logo-wechat"></ion-icon>
                                     <div class="topic">Phone</div>
                                     <div class="text-one"> +254719 454 431</div>
                                     <div class="text-two">+254711 274 834</div>
